WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11710
REGRESSION (
r17906
): Crash in WebCore::FrameMac
https://bugs.webkit.org/show_bug.cgi?id=11710
Summary
REGRESSION (r17906): Crash in WebCore::FrameMac
Matt Lilek
Reported
2006-11-28 20:06:09 PST
Create a selection on a page, then close that tab/window - WebKit go boom. Regressed between 17902 and 17915.
Attachments
Crashlog
(20.12 KB, text/plain)
2006-11-28 20:06 PST
,
Matt Lilek
no flags
Details
Fix w/changelog
(13.04 KB, patch)
2006-11-29 13:55 PST
,
Geoffrey Garen
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Matt Lilek
Comment 1
2006-11-28 20:06:43 PST
Created
attachment 11662
[details]
Crashlog
Kevin M. Dean
Comment 2
2006-11-28 20:25:29 PST
I can confirm that I getting the same crashes.
mitz
Comment 3
2006-11-28 22:33:58 PST
My local build is
r17906
and has this bug. I suspect it was introduced in
r17906
.
mitz
Comment 4
2006-11-28 23:20:28 PST
if (editor()->client()->isContinuousSpellCheckingEnabled()) { The editor client is 0 since the page is being destroyed.
Geoffrey Garen
Comment 5
2006-11-29 08:38:58 PST
Sounds right to me. It's really lame that we have to NULL check clients (and only some clients, at that). I wonder if we can come up with a better solution.
Geoffrey Garen
Comment 6
2006-11-29 12:05:18 PST
I'll take this one.
Geoffrey Garen
Comment 7
2006-11-29 13:55:25 PST
Created
attachment 11673
[details]
Fix w/changelog
mitz
Comment 8
2006-11-29 14:08:32 PST
Comment on
attachment 11673
[details]
Fix w/changelog r=me "Editor::" is redundant here: + NSString* Editor::_web_userVisibleString(NSURL* nsURL);
Geoffrey Garen
Comment 9
2006-11-29 14:25:52 PST
Committed revision 17930.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug