        Reviewed by Mitz Pettel.

Fixed http://bugs.webkit.org/show_bug.cgi?id=11710
        REGRESSION (r17906): Crash in WebCore::FrameMac

        Added null checks for EditorClient, since it can be NULL when the page
        has been destroyed. Removed external access to EditorClient, since it's
        an implementation detail of the Editor.

        No test case because this crash depends on window tear-down. Layout tests
        pass.



Canonical link: https://commits.webkit.org/15060@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@17930 268f45cc-cd09-0410-ab3c-d52691b4dbfc