WebCore/bridge/EditorClient.h
@@ -87,7 +87,9 @@ public:
     virtual void redo() = 0;
 
 #if PLATFORM(MAC)
+    // FIXME: This should become SelectionController::toWebArchive()
     virtual NSData* dataForArchivedSelection(Frame*) = 0; 
+
     virtual NSString* _web_userVisibleString(NSURL*) = 0;
 #endif
 
