WebCore/editing/JSEditor.cpp
@@ -408,7 +408,7 @@ bool execPrint(Frame* frame, bool, const String&)
 
 bool execRedo(Frame* frame, bool, const String&)
 {
-    frame->editor()->client()->redo();
+    frame->editor()->redo();
     return true;
 }
 
@@ -454,7 +454,7 @@ bool execUnderline(Frame* frame, bool, const String&)
 
 bool execUndo(Frame* frame, bool, const String&)
 {
-    frame->editor()->client()->undo();
+    frame->editor()->undo();
     return true;
 }
 
@@ -532,12 +532,12 @@ bool enabledAnyRichlyEditableRangeSelection(Frame* frame)
 
 bool enabledRedo(Frame* frame)
 {
-    return frame->editor()->client()->canRedo();
+    return frame->editor()->canRedo();
 }
 
 bool enabledUndo(Frame* frame)
 {
-    return frame->editor()->client()->canUndo();
+    return frame->editor()->canUndo();
 }
 
 // =============================================================================================
